--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/csv_serialization": "^4.0",
-        "drupal/default_content": "^2.0@alpha",
+        "drupal/default_content": "2.0.x-dev@dev",
         "drupal/draggableviews": "^2.0",
         "drupal/embed": "^1.0",
         "drupal/entity": "^1.0",
@@ -196,7 +196,13 @@
                 "[#3326684] Deprecated function: mb_strtolower(): Passing null to parameter #1 ($string) of type string is deprecated in Drupal\\Component\\Utility\\Html::getId() (line 219 of core/lib/Drupal/Component/Utility/Html.php)": "https://www.drupal.org/files/issues/2023-11-21/3199.patch",
                 "[#3294680] PHP8.1 deprecation: str_replace(): Passing null to parameter #3": "https://www.drupal.org/files/issues/2023-06-07/3294680-22.patch",
                 "[#3049332] PHP message: Error: Call to a member function getEntityTypeId() on null (Layout Builder)": "https://www.drupal.org/files/issues/2023-08-16/call-null-inline-block-3049332-83.patch",
-                "[#3294474] Imported layout builder settings fail if inline blocks are present due to missing revisions": "https://www.drupal.org/files/issues/2023-11-23/3294474-12-imported-lb-settings.diff"
+                "[#3294474] Imported layout builder settings fail if inline blocks are present due to missing revisions": "https://www.drupal.org/files/issues/2023-11-23/3294474-12-imported-lb-settings.diff",
+                "[#2942975] [PP-1] Expose Layout Builder data to REST and JSON:API": "https://www.drupal.org/files/issues/2023-11-15/2942975-251.patch"
+            },
+            "drupal/default_content": {
+                "[#3160146] Add a Normalizer and Denormalizer to support Layout Builder": "https://www.drupal.org/files/issues/2022-12-06/default_content-3160146-53.patch",
+                "[#2698425] Do not reimport existing entities": "https://git.drupalcode.org/project/default_content/-/merge_requests/14.diff",
+                "[#3404830] Replace existing file on import": "https://www.drupal.org/files/issues/2023-11-29/3404830-2-replace-existing-file-on-import.patch"
             },
             "drupal/draggableviews": {
                 "[#2867348] Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
